--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,15 @@
   vertical-align: middle !important;
 }
 
+a {
+  color: black !important;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none !important;
+}
+
 /*!
  * Bootstrap v4.6.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
