--- a/resources/sass/customized_bootstrap/customized_bootstrap.scss
+++ b/resources/sass/customized_bootstrap/customized_bootstrap.scss
@@ -1,3 +1,13 @@
 .table td{
     vertical-align: middle !important;
 }
+
+// Links
+a {
+    color: black !important;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none !important;
+}
