--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,4 +11,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 // PRODUCTS INDEX
-@import 'resources/sass/products/index'
+@import 'resources/sass/products/index';
+
+// Products SHOW
+@import 'resources/sass/products/show';
